--- a/Uniform.SDK/packages.config
+++ b/Uniform.SDK/packages.config
@@ -11,47 +11,43 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net462" />
   <package id="Microsoft.WebSockets" version="0.2.3.1" targetFramework="net462" />
   <!--Uniform.Deploy-->
-  <package id="Uniform.Abstractions" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Content.Sitecore" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Content.Sitecore.MvcSupport" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.ContentSync.AzureBlob" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.ContentSync.AkamaiNetStorage" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.ContentSync.AWS" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.ContentSync.Core" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.ContentSync.InitialSync" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Deployment.Core" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Deployment.HostedService" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Deployment.Incremental" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.PurgeCache.Core" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.PurgeCache.Akamai" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.PurgeCache.Cloudflare" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.PurgeCache.CloudFront" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Deployment.Netlify" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.ItemBasedConfiguration" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Licensing" version="7.1.220915-1" targetFramework="net45" />
-  <package id="Uniform.Licensing.Sitecore" version="7.1.220915-1" targetFramework="net452" />
-  <package id="Uniform.Preview.Core" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Sitecore.Admin" version="7.1.220915-1" targetFramework="net462" />
+  <package id="Uniform.Abstractions" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.ComponentModel" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Content.Sitecore" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Content.Sitecore.MvcSupport" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.ContentSync.AzureBlob" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.ContentSync.AkamaiNetStorage" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.ContentSync.AWS" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.ContentSync.Core" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.ContentSync.InitialSync" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Deployment.Core" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Deployment.HostedService" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Deployment.Incremental" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.PurgeCache.Core" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.PurgeCache.Akamai" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.PurgeCache.Cloudflare" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.PurgeCache.CloudFront" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Deployment.Netlify" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.ItemBasedConfiguration" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Licensing" version="7.2.230222-1" targetFramework="net45" />
+  <package id="Uniform.Licensing.Sitecore" version="7.2.230222-1" targetFramework="net452" />
+  <package id="Uniform.Preview.Core" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Sitecore.Admin" version="7.2.230222-1" targetFramework="net462" />
   <!--Optimize-->
-  <package id="Uniform.Optimize.Core" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Optimize.MvcSupport" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Optimize.Personalization" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Optimize.Personalization.Rules" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Optimize.Personalization.Esi.Core" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Personalization.Esi.Mvc" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Personalization.Esi.OracleDmp" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Personalization.Esi.Rules" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Tracking" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Tracking.GoogleAnalytics" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Tracking.GoogleAnalytics4" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Tracking.OracleDmp" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Tracking.SitecoreXdb" version="7.1.220915-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Core" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Optimize.MvcSupport" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Optimize.Personalization" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Optimize.Personalization.Rules" version="7.2.230222-1" targetFramework="net462" />
+  <package id="Uniform.Optimize.Personalization.Esi.Core" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Personalization.Esi.Mvc" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Personalization.Esi.OracleDmp" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Personalization.Esi.Rules" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Tracking" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Tracking.GoogleAnalytics" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Tracking.GoogleAnalytics4" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Tracking.OracleDmp" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Tracking.SitecoreXdb" version="7.2.230222-1" targetFramework="net472" />
   <!--Optimize.Jss-->
-  <package id="Uniform.Optimize.Personalization.JssSupport" version="7.1.220915-1" targetFramework="net472" />
-  <package id="Uniform.Optimize.Personalization.Esi.Jss" version="7.1.220915-1" targetFramework="net472" />
-  <!-- Platform -->
-  <package id="Uniform.Platform.Canvas" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Platform.Canvas.Migration" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Platform.Canvas.ModelBuilder" version="7.1.220915-1" targetFramework="net462" />
-  <package id="Uniform.Platform.Canvas.SSC" version="7.1.220915-1" targetFramework="net462" />
+  <package id="Uniform.Optimize.Personalization.JssSupport" version="7.2.230222-1" targetFramework="net472" />
+  <package id="Uniform.Optimize.Personalization.Esi.Jss" version="7.2.230222-1" targetFramework="net472" />
 </packages>
